--- a/ch01/angular-template.html
+++ b/ch01/angular-template.html
@@ -1,10 +1,21 @@
-<html ng-app="App">
+<html>
 <head>
-  <title>HTML/DOM Template in AngularJS</title>
-  <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="../js/ch01/angular-template.js"></script>
+  <title>HTML/DOM Template in Angular2</title>
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
+
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({ transpiler: 'typescript' });
+    System.import('../js/ch01/angular-template');
+  </script>
 </head>
 <body>
-  <span>Hello, <span ng-bind="name"></span></span>
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
 </body>
 </html>
