--- a/ch01/twoway-binding.html
+++ b/ch01/twoway-binding.html
@@ -1,16 +1,27 @@
-<html ng-app="App">
+<html>
 <head>
-  <title>Two way Data Binding with Form Controls</title>
-  <script src="../bower_components/angular/angular.js"></script>
+  <title>Angular2: Two way Data Binding with Form Controls</title>
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
+
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: {
+        emitDecoratorMetadata: true,
+        experimentalDecorators: true
+      }
+    });
+    System.import('../js/ch01/twoway-binding');
+  </script>
 </head>
 <body>
-  <input type='checkbox' ng-model='choose' />
-  <div>{{choose}}</div>
-
-  <button ng-click="choose=!choose">Toggle Checkbox</button>
-
-  <script type="text/javascript">
-    angular.module('App', []);
-  </script>
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
 </body>
 </html>
