Chapter 2: nested components sharing data with @Input

--- a/ch02/component-nested.html
+++ b/ch02/component-nested.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Component in Angular2</title>
+    <title>Component (Nested) in Angular2</title>
     <!-- 1. Load libraries -->
   <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
   <script src="../node_modules/systemjs/dist/system.src.js"></script>
@@ -11,7 +11,7 @@
   <!-- 2. Configure SystemJS -->
   <script>
     System.config({ transpiler: 'typescript' });
-    System.import('../js/ch02/component');
+    System.import('../js/ch02/component-nested');
   </script>
   </head>
   <body>
