--- a/ch02/instant-search.html
+++ b/ch02/instant-search.html
@@ -1,17 +1,27 @@
-<html ng-app="InstantDemo">
-<head>
-  <title>Intant Search in AngularJS</title>
-  <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="../js/ch02/instant-search.js"></script>
-  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-</head>
-<body style="padding:20px;">
-  <div ng-controller="InstantCtrl">
-    <input type='text' ng-model="search" /><br><br>
+<html>
+  <head>
+    <title>Instant Search in Angular2</title>
+    <!-- 1. Load libraries -->
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
 
-    <ul class="list-group">
-      <li class="list-group-item" ng-repeat="favorite in favorites | filter: search" ng-bind="favorite"></li>
-    </ul>
-  </div>
-</body>
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: {
+        emitDecoratorMetadata: true,
+        experimentalDecorators: true
+      }
+    });
+    System.import('../js/ch02/instant-search');
+  </script>
+  </head>
+  <body>
+    <!-- 3. Display the application -->
+    <ng-app>Loading...</ng-app>
+  </body>
 </html>
