--- a/ch04/template.html
+++ b/ch04/template.html
@@ -1,9 +1,24 @@
 <html ng-app="MarqueeApp">
 <head>
   <title>Feeding the minimal Template inline</title>
-  <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-  <!--<script type="text/javascript" src="http://code.angularjs.org/snapshot/angular.js"></script>-->
-  <script type="text/javascript" src="../js/ch04/template.js"></script>
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
+
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: {
+        emitDecoratorMetadata: true,
+        experimentalDecorators: true
+      }
+    });
+    System.import('../js/ch04/template');
+  </script>
   <style type="text/css">
     div.wave > span {
       float: left;
@@ -43,20 +58,7 @@
   </style>
 </head>
 <body>
-  <!-- Element -->
-  <super-marquee data-text="<span>AngularJS </span><span>Directives </span><span>inAction, </span><span>Yey..!!</span>"></super-marquee>
-
-  <!-- Attribute -->
-  <div super-marquee data-text="<span>AngularJS </span><span>Directives </span><span>inAction, </span><span>Yey..!!</span>"></div>
-
-  <!-- Class -->
-  <div class='super-marquee' data-text="<span>AngularJS </span><span>Directives </span><span>inAction, </span><span>Yey..!!</span>"></div>
-
-  <table border="1" width="100%" height="160px">
-    <tr>
-      <td height="30px">SuperMarquee Live Demo</td>      
-    </tr>
-    <!--directive: super-marquee-->
-  </table>
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
 </body>
 </html>
