Chapter 4: templateUrl in directive/component

--- a/ch04/templateUrl-partial.html
+++ b/ch04/templateUrl-partial.html
@@ -1,6 +1,6 @@
 <marquee>
   <div class="wave">
-    <span>AngularJS </span>
+    <span>Angular2 </span>
     <span>Directives </span>
     <span>inAction, </span>
     <span>Yey..!!</span>
