--- a/ch04/priority.html
+++ b/ch04/priority.html
@@ -1,12 +1,26 @@
 <html ng-app="MarqueeApp">
 <head>
   <title>Prioritizing invocation irrespective of placements</title>
-  <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-  <!--<script type="text/javascript" src="http://code.angularjs.org/snapshot/angular.js"></script>-->
-  <script type="text/javascript" src="../js/ch04/priority.js"></script>
-  <style type="text/css">
-    marquee { padding-bottom: 20px; }
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: {
+        emitDecoratorMetadata: true,
+        experimentalDecorators: true
+      }
+    });
+    System.import('../js/ch04/priority');
+  </script>
+  <style type="text/css">
     div.wave > span {
       float: left;
       text-align: center;
@@ -45,20 +59,7 @@
   </style>
 </head>
 <body>
-  <!-- Element -->
-  <super-marquee looper></super-marquee>
-
-  <!-- Attribute -->
-  <div looper super-marquee></div>
-
-  <!-- Class -->
-  <div class='super-marquee looper'></div>
-
-  <table border="1" width="100%" height="160px">
-    <tr>
-      <td height="30px">SuperMarquee Live Demo</td>      
-    </tr>
-    <!-- directive: super-marquee -->
-  </table>
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
 </body>
 </html>
