chore(*): remove unwanted angular1-specific code

--- a/ch04/priority.html
+++ b/ch04/priority.html
@@ -1,4 +1,4 @@
-<html ng-app="MarqueeApp">
+<html>
 <head>
   <title>Prioritizing invocation irrespective of placements</title>
   <!-- 1. Load libraries -->
