--- a/ch04/templateUrl.html
+++ b/ch04/templateUrl.html
@@ -1,4 +1,4 @@
-<html ng-app="MarqueeApp">
+<html>
 <head>
   <title>Feeding an external template using templateUrl</title>
   <!-- 1. Load libraries -->
