--- a/ch05/scope-isolate.html
+++ b/ch05/scope-isolate.html
@@ -1,44 +1,27 @@
-<html ng-app="SpinnerApp">
+<html>
 <head>
   <title>Scope: Isolate</title>
-  <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-  <!--<script type="text/javascript" src="http://code.angularjs.org/snapshot/angular.js"></script>-->
-  <script type="text/javascript" src="../js/ch05/scope-isolate.js"></script>
-  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">  
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
+  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: {
+        emitDecoratorMetadata: true,
+        experimentalDecorators: true
+      }
+    });
+    System.import('../js/ch05/scope-isolate');
+  </script>
 </head>
-<body style="padding: 50px;" ng-controller="ScopeCtrl">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-default">
-        <div class="panel-heading"><b>Job Application Form</b></div>
-        <div class="panel-body">
-          <form class="form-horizontal" role="form">
-            <div class="form-group">
-              <label class="col-xs-4 col-lg-2 control-label">
-                Rate Yourself:
-              </label>
-              <div class="col-xs-8 col-lg-10">
-                <adia-spinner data-default="1" data-step="1" data-min="1" data-max="5" on-change="getRating(param)"></adia-spinner>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-xs-4 col-lg-2 control-label">
-                Availability for Interview:
-              </label>
-              <div class="col-xs-8 col-lg-10">
-                <adia-spinner data-type="list" data-list="['Sun', 'Mon', 'Tue', 'Wed', 'Thur', 'Fri', 'Sat']" on-change="getWeekday"></adia-spinner>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-xs-4 col-lg-2 control-label"></label>
-              <div class="col-xs-8 col-lg-10">
-                <button class="btn btn-lg btn-primary" ng-click="submit()">I'm Interested</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+<body style="padding: 50px;">
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
 </body>
 </html>
