--- a/ch06/base.html
+++ b/ch06/base.html
@@ -1,8 +1,11 @@
-<html ng-app="ThumbApp">
+<html>
 <head>
   <title>ThumbViewer</title>
-  <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="../js/ch06/base.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
   <style type="text/css">
     .thumbnail-container {
@@ -13,21 +16,20 @@
     }
     img { width: 100%; }
   </style>
-  <script type="text/ng-template" id="thumbviewer.html">
-    <div class='thumbnail-container bg-success img-rounded'>
-      <div class='thumbnail-wrapper'>
-        <!-- Page Thumbs go here -->
-      </div>
-    </div>
-  </script>
-
-  <script type="text/ng-template" id="thumb.html">
-    <div class="thumbnail pull-left"></div>
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: {
+        emitDecoratorMetadata: true,
+        experimentalDecorators: true
+      }
+    });
+    System.import('../js/ch06/base');
   </script>
 </head>
-<body style="padding: 10px;" ng-controller="ThumbCtrl">
-  <thumbviewer data-size="150" data-gap="0">
-   
-  </thumbviewer>
+<body style="padding: 10px;">
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
 </body>
 </html>
