--- a/ch04/iscroll-directive.html
+++ b/ch04/iscroll-directive.html
@@ -1,24 +1,21 @@
 <html>
 <head>
   <title>iScroll Angular Directive</title>
-  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/core-js/client/shim.min.js"></script>
+  <script src="../node_modules/zone.js/dist/zone.js"></script>
+  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
   <script src="../node_modules/systemjs/dist/system.src.js"></script>
-  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="../node_modules/typescript/lib/typescript.js"></script>
-  <script type="text/javascript" src="../bower_components/iscroll/build/iscroll.js"></script>
-  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+  <script src="../node_modules/iscroll/build/iscroll.js"></script>
+  <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 
   <!-- 2. Configure SystemJS -->
+  <script src="../systemjs.config.js"></script>
   <script>
-    System.config({
-      transpiler: 'typescript',
-      typescriptOptions: {
-        emitDecoratorMetadata: true,
-        experimentalDecorators: true
-      }
-    });
-    System.import('../js/ch04/iscroll-directive');
+    System.import('../js/ch04/iscroll-directive.js').catch(function(err){ console.error(err); });
   </script>
   <style type="text/css">
     #wrapper {
