--- a/ch01/twoway-binding.html
+++ b/ch01/twoway-binding.html
@@ -1,23 +1,19 @@
 <html>
 <head>
   <title>Angular2: Two way Data Binding with Form Controls</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- 1. Load libraries -->
-  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/core-js/client/shim.min.js"></script>
+  <script src="../node_modules/zone.js/dist/zone.js"></script>
+  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
   <script src="../node_modules/systemjs/dist/system.src.js"></script>
-  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="../node_modules/typescript/lib/typescript.js"></script>
 
   <!-- 2. Configure SystemJS -->
+  <script src="../systemjs.config.js"></script>
   <script>
-    System.config({
-      transpiler: 'typescript',
-      typescriptOptions: {
-        emitDecoratorMetadata: true,
-        experimentalDecorators: true
-      }
-    });
-    System.import('../js/ch01/twoway-binding');
+    System.import('../js/ch01/twoway-binding.js').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body>
