--- a/ch02/provider.html
+++ b/ch02/provider.html
@@ -1,27 +1,23 @@
 <html>
-  <head>
-    <title>Component in Angular2</title>
-    <!-- 1. Load libraries -->
-  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+<head>
+  <title>Provider in Angular2</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/core-js/client/shim.min.js"></script>
+  <script src="../node_modules/zone.js/dist/zone.js"></script>
+  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
   <script src="../node_modules/systemjs/dist/system.src.js"></script>
-  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="../node_modules/typescript/lib/typescript.js"></script>
 
   <!-- 2. Configure SystemJS -->
+  <script src="../systemjs.config.js"></script>
   <script>
-    System.config({
-      transpiler: 'typescript',
-      typescriptOptions: {
-        emitDecoratorMetadata: true,
-        experimentalDecorators: true
-      }
-    });
-    System.import('../js/ch02/provider');
+    System.import('../js/ch02/provider.js').catch(function(err){ console.error(err); });
   </script>
-  </head>
-  <body>
-    <!-- 3. Display the application -->
-    <ng-app>Loading...</ng-app>
-  </body>
+</head>
+<body>
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
+</body>
 </html>
