--- a/ch04/super-marquee.html
+++ b/ch04/super-marquee.html
@@ -1,23 +1,20 @@
 <html>
 <head>
   <title>Final Extended superMarquee</title>
-  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
-  <script src="../node_modules/systemjs/dist/system.src.js"></script>
-  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="../node_modules/typescript/lib/typescript.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- 1. Load libraries -->
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../node_modules/core-js/client/shim.min.js"></script>
+  <script src="../node_modules/zone.js/dist/zone.js"></script>
+  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
 
   <!-- 2. Configure SystemJS -->
+  <script src="../systemjs.config.js"></script>
   <script>
-    System.config({
-      transpiler: 'typescript',
-      typescriptOptions: {
-        emitDecoratorMetadata: true,
-        experimentalDecorators: true
-      }
-    });
-    System.import('../js/ch04/super-marquee');
+    System.import('../js/ch04/super-marquee.js').catch(function(err){ console.error(err); });
   </script>
   <style type="text/css">
     div.wave-wrapper {
