--- a/ch05/scope-true.html
+++ b/ch05/scope-true.html
@@ -1,23 +1,20 @@
 <html>
 <head>
   <title>Scope: true</title>
-  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/core-js/client/shim.min.js"></script>
+  <script src="../node_modules/zone.js/dist/zone.js"></script>
+  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
   <script src="../node_modules/systemjs/dist/system.src.js"></script>
-  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="../node_modules/typescript/lib/typescript.js"></script>
-  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 
   <!-- 2. Configure SystemJS -->
+  <script src="../systemjs.config.js"></script>
   <script>
-    System.config({
-      transpiler: 'typescript',
-      typescriptOptions: {
-        emitDecoratorMetadata: true,
-        experimentalDecorators: true
-      }
-    });
-    System.import('../js/ch05/scope-true');
+    System.import('../js/ch05/scope-true.js').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body style="padding: 50px;">
