--- a/ch06/thumbnail-viewer.html
+++ b/ch06/thumbnail-viewer.html
@@ -1,4 +1,50 @@
-<html ng-app="ThumbApp">
+<html>
+<head>
+  <title>ThumbViewer</title>
+  <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
+  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+  <style type="text/css">
+    .thumbnail-container {
+      display: inline-block;
+      width: 100%;
+      overflow: hidden;
+      padding: 10px;
+    }
+    .thumbnail.active {
+      border: 4px solid #5cb85c;
+    }
+    .thumbnail-wrapper {
+      -webkit-transition: margin-left 0.5s ease;
+         -moz-transition: margin-left 0.5s ease;
+          -ms-transition: margin-left 0.5s ease; 
+           -o-transition: margin-left 0.5s ease;
+              transition: margin-left 0.5s ease;
+    }
+    img { width: 100%; }
+  </style>
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: {
+        emitDecoratorMetadata: true,
+        experimentalDecorators: true
+      }
+    });
+    System.import('../js/ch06/thumbviewer');
+  </script>
+</head>
+<body style="padding: 10px;">
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
+</body>
+</html>
+
+<!--<html ng-app="ThumbApp">
 <head>
   <title>ThumbViewer</title>
   <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
@@ -57,4 +103,4 @@
     </thumb>
   </thumbviewer>
 </body>
-</html>
+</html>-->
