--- a/ch06/ng-model.html
+++ b/ch06/ng-model.html
@@ -1,26 +1,25 @@
 <html ng-app="ngModelApp">
 <head>
   <title>ngModel Controller</title>
-  <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="../js/ch06/ng-model.js"></script>
-  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- 1. Load libraries -->
+  <script src="../node_modules/core-js/client/shim.min.js"></script>
+  <script src="../node_modules/zone.js/dist/zone.js"></script>
+  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="../node_modules/iscroll/build/iscroll.js"></script>
+  <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+
+  <!-- 2. Configure SystemJS -->
+  <script src="../systemjs.config.js"></script>
+  <script>
+    System.import('../js/ch06/ng-model.js').catch(function(err){ console.error(err); });
+  </script>
 </head>
 <body style="padding: 10px;">
-  <form name="MyForm" role="form">
-    <!-- <input ng-model="input" numeric ng-keypress="foobar()"> -->
-    <div class="alert alert-success" ng-hide="MyForm.$dirty"><b>Want to Join a Dream Company?</a></div>
-    <div class="alert alert-info" ng-hide="MyForm.$pristine"><b>Focus on your strengths to attract more recruiters!</a></div>
-
-    <div class="form-group" ng-class="{'has-error': MyForm.email.$invalid}">
-      <label class="control-label" for="email">Email address</label>
-      <input type="email" name="email" class="form-control" placeholder="Enter email" ng-model="email" is-unique>
-    </div>
-    <div class="form-group">
-      <label class="control-label">Willing to Relocate?</label>
-      <input type="checkbox" name="relocate" ng-model="relocate" will-relocate> {{MyForm.relocate.$viewValue}}
-    </div>
-
-    <button type="submit" class="btn btn-primary" ng-click="email = '';relocate = false;MyForm.$setPristine();">Apply</button>
-  </form>
+  <!-- 3. Display the application -->
+  <ng-app>Loading...</ng-app>
 </body>
 </html>
