Migrate all demos to RC5 with NgModules :scream:

--- a/ch01/twoway-binding.html
+++ b/ch01/twoway-binding.html
@@ -13,7 +13,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch01/twoway-binding.js').catch(function(err){ console.error(err); });
+    System.import('ch01/twoway-binding').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body>
