--- a/ch03/placeholder.html
+++ b/ch03/placeholder.html
@@ -1,7 +1,6 @@
 <html>
 <head>
   <title>Angular2: Placeholder Directive</title>
-  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -10,11 +9,12 @@
   <script src="../node_modules/zone.js/dist/zone.js"></script>
   <script src="../node_modules/reflect-metadata/Reflect.js"></script>
   <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch03/placeholder.js').catch(function(err){ console.error(err); });
+    System.import('ch03/placeholder').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body>
