--- a/ch04/restrict.html
+++ b/ch04/restrict.html
@@ -13,7 +13,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch04/restrict.js').catch(function(err){ console.error(err); });
+    System.import('ch04/restrict').catch(function(err){ console.error(err); });
   </script>
   <style type="text/css">
     div.wave > span {
