--- a/ch04/template.html
+++ b/ch04/template.html
@@ -13,7 +13,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch04/template.js').catch(function(err){ console.error(err); });
+    System.import('ch04/template').catch(function(err){ console.error(err); });
   </script>
   <style type="text/css">
     div.wave > span {
