--- a/ch05/scope-true.html
+++ b/ch05/scope-true.html
@@ -14,7 +14,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch05/scope-true.js').catch(function(err){ console.error(err); });
+    System.import('ch05/scope-true').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body style="padding: 50px;">
