--- a/ch01/angular-template.html
+++ b/ch01/angular-template.html
@@ -13,7 +13,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch01/angular-template.js').catch(function(err){ console.error(err); });
+    System.import('ch01/angular-template').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body>
