--- a/ch02/instant-search.html
+++ b/ch02/instant-search.html
@@ -13,7 +13,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch02/instant-search.js').catch(function(err){ console.error(err); });
+    System.import('ch02/instant-search').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body>
