--- a/ch02/pipe.html
+++ b/ch02/pipe.html
@@ -13,7 +13,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch02/pipe.js').catch(function(err){ console.error(err); });
+    System.import('ch02/pipe').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body>
