--- a/ch04/super-marquee.html
+++ b/ch04/super-marquee.html
@@ -14,7 +14,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch04/super-marquee.js').catch(function(err){ console.error(err); });
+    System.import('ch04/super-marquee').catch(function(err){ console.error(err); });
   </script>
   <style type="text/css">
     div.wave-wrapper {
