--- a/ch05/iscroll-directive.html
+++ b/ch05/iscroll-directive.html
@@ -15,7 +15,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="../systemjs.config.js"></script>
   <script>
-    System.import('../js/ch05/iscroll-directive.js').catch(function(err){ console.error(err); });
+    System.import('ch05/iscroll-directive').catch(function(err){ console.error(err); });
   </script>
   <style type="text/css">
     #wrapper {
