Make components testable by splitting NgModules into separate files

--- a/ch01/twoway-binding.html
+++ b/ch01/twoway-binding.html
@@ -3,17 +3,18 @@
   <title>Angular2: Two way Data Binding with Form Controls</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
 
   <!-- 1. Load libraries -->
-  <script src="../node_modules/core-js/client/shim.min.js"></script>
-  <script src="../node_modules/zone.js/dist/zone.js"></script>
-  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
-  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+  <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
 
   <!-- 2. Configure SystemJS -->
-  <script src="../systemjs.config.js"></script>
+  <script src="systemjs.config.js"></script>
   <script>
-    System.import('ch01/twoway-binding').catch(function(err){ console.error(err); });
+    System.import('ch01/twoway-binding.module').catch(function(err){ console.error(err); });
   </script>
 </head>
 <body>
