--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><a href="/ch05/scope-false.html">scope-false.html</a></li>
     <li><a href="/ch05/scope-true.html">scope-true.html</a></li>
     <li><a href="/ch05/scope-isolate.html">scope-isolate.html</a></li>
+    <li><a href="/ch05/iscroll-directive.html">iscroll-directive.html</a></li>
     <li><a href="/ch06/transclude.html">transclude.html</a></li>
   </ul>
 </body>
