--- a/ch04/template.html
+++ b/ch04/template.html
@@ -1,19 +1,20 @@
 <html>
 <head>
   <title>Feeding the minimal Template inline</title>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
 
   <!-- 1. Load libraries -->
-  <script src="../node_modules/core-js/client/shim.min.js"></script>
-  <script src="../node_modules/zone.js/dist/zone.js"></script>
-  <script src="../node_modules/reflect-metadata/Reflect.js"></script>
-  <script src="../node_modules/systemjs/dist/system.src.js"></script>
+  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+  <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
 
   <!-- 2. Configure SystemJS -->
-  <script src="../systemjs.config.js"></script>
+  <script src="systemjs.config.js"></script>
   <script>
-    System.import('ch04/template').catch(function(err){ console.error(err); });
+    System.import('ch04/template.module').catch(function(err){ console.error(err); });
   </script>
   <style type="text/css">
     div.wave > span {
